syntax = "proto3";

package users.v1;

import "google/protobuf/timestamp.proto";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_READER = 1;
  ROLE_AGENT = 2;
  ROLE_ADMIN = 3;
}

message User {
  uint64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  Role role = 5;
  optional google.protobuf.Timestamp created_at = 6;
  optional google.protobuf.Timestamp updated_at = 7;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}
message RegisterResponse { User user = 1; }

message GetUserRequest { uint64 id = 1; }
message GetUserResponse { User user = 1; }

message UpdateUserRequest { User user = 1; }
message UpdateUserResponse { User user = 1; }

message ListUsersRequest {
  uint64 skip = 1;
  uint64 limit = 2;
}
message ListUsersResponse { repeated User user = 1; }

message DeleteUserRequest { uint64 id = 1; }
message DeleteUserResponse {}